Fix spacing errors

--- a/src/pages/css/home.css
+++ b/src/pages/css/home.css
@@ -150,7 +150,7 @@
   border: 7px solid #76b4bd;
   box-sizing: border-box;
   border-radius: 30px;
-  width: 120%;
+  width: 110%;
 
   padding-left: 8%;
   padding-right: 8%;
