--- a/src/pages/css/projects.css
+++ b/src/pages/css/projects.css
@@ -30,10 +30,6 @@
   padding-bottom: 3%;
 }
 
-.project-content {
-  padding-top: 1%;
-}
-
 .projects-box {
   margin-top: 5%;
   margin-bottom: 5%;
@@ -144,6 +140,10 @@
   margin-right: 1.5%;
   margin-top: 2%;
   margin-bottom: 3%;
+}
+
+.proj-img-center {
+  padding-top: 8%;
 }
 
 .proj-img {
